hn_tests/opt/failing/allDigits.hn
allDigits ss = {
	loopCond s = {
		lt c d = less b c
		b = deref s
		c = 58
		_not (_or (_not (_not (lt 48 b))) (_not (lt b c)))
	}
	loopBody s = next s
	eq (deref (whileF loopCond loopBody ss)) 0
}